# flickfeast

./: .gitignore  AGENTS.md  Makefile  README.md  agents-setup.mmd  main.py  pyproject.toml  requirements.txt
backend/: .env.example
backend/app/: agents_flow.py  auth.py  config.py  image_cache.py  main.py  menu_cache.py  movie_api.py  recipe_api.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/auth/google/callback/: index.html
frontend/src/: App.vue  style.css
tests/: test_movies_search.py
